[200~Fixed h1 size irregularity. Added navlink hover effect. Modified spacing for legibility.

--- a/style.css
+++ b/style.css
@@ -1,23 +1,52 @@
-.title {
+h1 {
     display: inline-block;
     font-family: 'Bebas Neue', cursive;
     font-size: 300%;
+    text-shadow: 1.5px 1.5px 1px #598392;
 }
+
 
 body {
     background-color: #AEC3B0;
+    font-family: Arial, Helvetica, sans-serif;
 }
-
 
 nav {
     font-family: 'Bebas Neue', cursive;
     font-size: 150%;
 }
 
+
 .navlink {
-    padding-right: 15px;
+    padding-right: 1em;
+    color: #124559;
+    font-size: 1.15em;
 }
 
 footer {
     font-size: 80%;
+}
+
+.textBlock {
+    text-indent: 2em;
+    line-height: 1.25em;
+}
+
+ul,
+ol {
+    line-height: 1.5em;
+}
+
+.navlink:hover {
+    color: #598392;
+    font-size: 1.25em;
+}
+
+q {
+    font-style: italic;
+}
+
+.quote {
+    padding-top: 1em;
+    padding-bottom: 1em;
 }
